--- a/index/static/style.css
+++ b/index/static/style.css
@@ -1,4 +1,3 @@
-32500rgba(0, 191,165, 1)/* GLOBAL */
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   line-height: 1.42857143;
@@ -9,7 +8,7 @@ body {
 }
 .darken {
   transition: background 0.5s ease;
-  background: rgba(100,100,100,1);
+  background: rgba(100,150,150,1);
 }
 
 /* BUTTONS */
@@ -17,6 +16,7 @@ body {
   border: 2px solid rgba(0, 191, 165, 1);
   padding: .25rem .5rem;
   color: #2e2e2e;
+  font-weight: 600;
   font-size: unset;
   background-color: rgba(255, 255, 255, .5);
   box-shadow: none;
@@ -606,7 +606,6 @@ body {
 }
 #multibar .nav-link-dope {
   color: #000;
-  margin-right: 5px;
 }
 #multibar-drop {
   padding: 0;
@@ -648,6 +647,7 @@ body {
 #flap {
   padding: 0;
   z-index: 75;
+  /* background-image: url("/static/bg.png"); */
 }
 #flap.extended{
   top: -500px;
@@ -715,7 +715,7 @@ body {
 
 /* LOGIN-SIGNUP */
 #login {
-  height: 456px;
+  height: 100%;
   text-align: center;
   padding-top: 15px;
 }
@@ -737,7 +737,7 @@ body {
 #login-wrapper {
   padding: 10px 10px 0;
   max-width: 300px;
-  min-height: 170px;
+  min-height: 200px;
   margin: auto;
 }
 .site-description {
@@ -1033,7 +1033,7 @@ body {
   text-align: center;
   height: 32px;
   width: 32px;
-  font-size: 18px;
+  font-size: 19px;
   font-weight: 600;
   border-radius: 50%;
   border: 2px solid rgba(0, 191,165, 1);
@@ -1123,6 +1123,7 @@ hr.h-line {
   box-shadow: rgba(0,0,0,.3) 0 1px 3px;
 }
 .player-badge {
+  overflow: hidden;
   margin: 0 5px;
   border-radius: 50%;
   height: 70px;
@@ -1131,46 +1132,44 @@ hr.h-line {
   -moz-box-shadow: rgba(0,0,0,.5) 0 0 5px;
   box-shadow: rgba(0,0,0,.5) 0 0 5px;
   transition: all .2s ease-in-out;
-  color: #000;
 }
 .player-badge a {
   color: #2e2e2e;
 }
 .player-badge:hover {
-  transform: rotate(-360deg);
-  -webkit-box-shadow: rgba(0,0,0,.5) 0 0 10px;
-  -moz-box-shadow: rgba(0,0,0,.5) 0 0 10px;
+  -webkit-box-shadow: rgba(0,0,0,.5) 0 0 20px;
+  -moz-box-shadow: rgba(0,0,0,.5) 0 0 20px;
   box-shadow: rgba(0,0,0,.5) 0 0 10px;
 }
 #player-logo {
   padding-left: 28px;
   padding-right: 28px;
 }
-#player-logo span {
-  top: 0px;
-  font-size: 24px;
-  height: 35px;
+#player-logo .char {
+  top: -3px;
+  font-size: 28px;
+  height: 38px;
   font-weight: 600;
   position: absolute;
   width: 14px;
   transform-origin: bottom center;
 }
-.char1 {
+.char-1 {
   transform: rotate(0deg);
 }
-.char2 {
+.char-2 {
   transform: rotate(60deg);
 }
-.char3 {
+.char-3 {
   transform: rotate(120deg);
 }
-.char4 {
+.char-4 {
   transform: rotate(180deg);
 }
-.char5 {
+.char-5 {
   transform: rotate(240deg);
 }
-.char6 {
+.char-6 {
   transform: rotate(300deg);
 }
 #player-image-drop {
