--- a/index/templates/multibar.html
+++ b/index/templates/multibar.html
@@ -3,15 +3,15 @@
   </div>
   <div class="player-badge color-3" id="player-logo">
     <a class="multibar-options-toggle lights-toggle"  href="#">
-      <span class="char1">d</span>
-      <span class="char2">o</span>
-      <span class="char3">p</span>
-      <span class="char4">e</span>
-      <span class="char5">p</span>
-      <span class="char6">o</span>
+      <span class="char char-1">d</span>
+      <span class="char char-2">o</span>
+      <span class="char char-3">p</span>
+      <span class="char char-4">e</span>
+      <span class="char char-5">p</span>
+      <span class="char char-6">o</span>
     </a>
   </div>
-  <a class="nav-link-dope d-inline-block d-xl-none multibar-options-toggle" href="#multibar-options-collapse" data-toggle="collapse" aria-expanded="true" aria-controls="multibar-options-collapse">
+  <a class="nav-link-dope d-inline-block d-xl-none multibar-options-toggle toggle" href="#multibar-options-collapse" data-toggle="collapse" aria-expanded="true" aria-controls="multibar-options-collapse">
     <i class="fas fa-bars icon"></i>
   </a>
   <a class="nav-link-dope charts-link d-none d-xl-inline-block" href="{% url 'charts' %}">
