--- a/podcasts/templates/charts.html
+++ b/podcasts/templates/charts.html
@@ -79,7 +79,7 @@
             <i class="fas fa-bars"></i>
           </span>
         </a>
-        <button class="btn-dope exp" data-toggle="collapse" data-target="#charts-collapse{{ forloop.counter }}" aria-expanded="false"
+        <button class="btn-dope exp" data-toggle="collapse" data-target="#{{ results.view }}-collapse{{ forloop.counter }}" aria-expanded="false"
           title="Show More">
           <span class="active">
             More
@@ -89,7 +89,7 @@
           </span>
         </button>
       </div>
-      <div class="collapse fade charts-collapse" id="charts-collapse{{ forloop.counter }}">
+      <div class="collapse fade {{ results.view }}-collapse" id="{{ results.view }}-collapse{{ forloop.counter }}">
         <ul class="dope-list">
           <li>
             <span>
