--- a/podcasts/templates/episodes-table.html
+++ b/podcasts/templates/episodes-table.html
@@ -72,7 +72,7 @@
                   No description
                   {% endif %}
                 </p>
-                <div class="dope-buttons dope-buttons-r">
+                <div class="dope-buttons dope-buttons-r px-0">
                   <form class="playlist-form" action="{% url 'playlist' %}" method="POST" target="_blank">
                     {% csrf_token %}
                     <input type="hidden" name="mode" value="play" />
