--- a/podcasts/templates/playlist.html
+++ b/podcasts/templates/playlist.html
@@ -123,7 +123,7 @@
               <i class="fas fa-bars"></i>
             </span>
           </a>
-          <button class="btn-dope exp" data-toggle="collapse" data-target="#previous-collapse{{ forloop.counter }}"
+          <button class="btn-dope exp" data-toggle="collapse" data-target="#{{ results.view }}-collapse{{ forloop.counter }}"
             aria-expanded="false" title="Show More">
             <span class="active">
               More
@@ -133,7 +133,7 @@
             </span>
           </button>
         </div>
-        <div class="collapse fade previous-collapse" id="previous-collapse{{ forloop.counter }}">
+        <div class="collapse fade {{ results.view }}-collapse" id="{{ results.view }}-collapse{{ forloop.counter }}">
           <ul class="dope-list">
             <li>
               <span>
